force-app/main/default/objects/Approval_Rule__c/Approval_Rule__c.object-meta.xml
<CustomObject>
    <label>Approval Rule</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Approval Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>