force-app/main/default/objects/Approval_Rule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>SSC-2182</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>