force-app/main/default/objects/Approval_Rule__c/fields/Add_On__c.field-meta.xml
<CustomField>
    <fullName>Add_On__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add On</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND (2 OR 3)) OR (4 AND 5)</booleanFilter>
        <errorMessage>You can choose only your country related records</errorMessage>
        <filterItems>
            <field>List_Add_On__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>FP_List_Add_On</value>
        </filterItems>
        <filterItems>
            <field>$User.Entity__c</field>
            <operation>equals</operation>
            <value>APAC FoodPanda</value>
        </filterItems>
        <filterItems>
            <field>$User.Entity__c</field>
            <operation>equals</operation>
            <value>DHH Delivery Hero Holding</value>
        </filterItems>
        <filterItems>
            <field>List_Add_On__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PY_List_Add_On</value>
        </filterItems>
        <filterItems>
            <field>$User.Entity__c</field>
            <operation>equals</operation>
            <value>UY Pedidosya, DHH Delivery Hero Holding</value>
        </filterItems>
        <infoMessage>You can choose only your country related records</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>List_Add_On__c</referenceTo>
    <relationshipLabel>Approval Rules</relationshipLabel>
    <relationshipName>Approval_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>