force-app/main/default/objects/Approval_Rule__c/fields/AddOn_Approver2__c.field-meta.xml
<CustomField>
    <fullName>AddOn_Approver2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AddOn Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Rules9</relationshipName>
    <type>Lookup</type>
</CustomField>