force-app/main/default/objects/Approval_Rule__c/fields/AddOn_Approver3__c.field-meta.xml
<CustomField>
    <fullName>AddOn_Approver3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AddOn Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_RulesEsK0</relationshipName>
    <type>Lookup</type>
</CustomField>