force-app/main/default/objects/Approval_Rule__c/fields/AddOn_Approver4__c.field-meta.xml
<CustomField>
    <fullName>AddOn_Approver4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AddOn Approver 4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_RulesEsKK</relationshipName>
    <type>Lookup</type>
</CustomField>