force-app/main/default/objects/Approval_Rule__c/fields/Applies_To__c.field-meta.xml
<CustomField>
    <fullName>Applies_To__c</fullName>
    <inlineHelpText>Select quote line item types tor which this rule will apply</inlineHelpText>
    <label>Submit for approval</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commissions</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Add-ons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>