force-app/main/default/objects/Approval_Rule__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 6) AND (2 OR 3) OR (4 AND 5) OR (7 AND 8)</booleanFilter>
        <errorMessage>You can choose only your country related records</errorMessage>
        <filterItems>
            <field>List_Service_Price__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>FP_List_Service_Price</value>
        </filterItems>
        <filterItems>
            <field>$User.Entity__c</field>
            <operation>equals</operation>
            <value>APAC FoodPanda</value>
        </filterItems>
        <filterItems>
            <field>$User.Entity__c</field>
            <operation>equals</operation>
            <value>DHH Delivery Hero Holding</value>
        </filterItems>
        <filterItems>
            <field>List_Service_Price__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PY_List_Service_Price</value>
        </filterItems>
        <filterItems>
            <field>$User.Entity__c</field>
            <operation>equals</operation>
            <value>DHH Delivery Hero Holding, UY Pedidosya</value>
        </filterItems>
        <filterItems>
            <field>List_Service_Price__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Talabat_List_Service_Price</value>
        </filterItems>
        <filterItems>
            <field>List_Service_Price__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CZ_List_Service_Price</value>
        </filterItems>
        <filterItems>
            <field>$User.Entity__c</field>
            <operation>equals</operation>
            <value>CZ Dame Jidlo</value>
        </filterItems>
        <infoMessage>You can choose only your country related records</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>List_Service_Price__c</referenceTo>
    <relationshipLabel>Approval Rules</relationshipLabel>
    <relationshipName>Approval_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>