force-app/main/default/objects/Approval_Rule__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Approval Rules</relationshipLabel>
    <relationshipName>Approval_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>