force-app/main/default/objects/Approval_Rule__c/fields/Level1_Approver2__c.field-meta.xml
<CustomField>
    <fullName>Level1_Approver2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 1 Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Rules2</relationshipName>
    <type>Lookup</type>
</CustomField>