force-app/main/default/objects/Approval_Rule__c/fields/Level1_Approver3__c.field-meta.xml
<CustomField>
    <fullName>Level1_Approver3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 1 Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Rules3</relationshipName>
    <type>Lookup</type>
</CustomField>