force-app/main/default/objects/Approval_Rule__c/fields/Level1_Approver4__c.field-meta.xml
<CustomField>
    <fullName>Level1_Approver4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 1 Approver 4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Rules4</relationshipName>
    <type>Lookup</type>
</CustomField>