force-app/main/default/objects/Approval_Rule__c/fields/Level1_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Level1_Percentage__c</fullName>
    <formula>IF( CONTAINS(Level1__c , &apos;%&apos;),
VALUE(SUBSTITUTE( SUBSTITUTE( TRIM(Level1__c) , &apos; &apos;, &apos;&apos;) , &apos;%&apos;, &apos;&apos;)) / 100,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level 1 Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>