force-app/main/default/objects/Approval_Rule__c/fields/Level1_Value__c.field-meta.xml
<CustomField>
    <fullName>Level1_Value__c</fullName>
    <formula>IF( CONTAINS(Level1__c , &apos;%&apos;),
0,
VALUE(SUBSTITUTE( TRIM(Level1__c) , &apos; &apos;, &apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level 1 Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>