force-app/main/default/objects/Approval_Rule__c/fields/Level2__c.field-meta.xml
<CustomField>
    <fullName>Level2__c</fullName>
    <inlineHelpText>Monetary value or percentage value. For percentage value add % sign at the end</inlineHelpText>
    <label>Level 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>