force-app/main/default/objects/Approval_Rule__c/fields/Level2_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Level2_Percentage__c</fullName>
    <formula>IF( CONTAINS(Level2__c , &apos;%&apos;),
VALUE(SUBSTITUTE(  SUBSTITUTE(TRIM(Level2__c), &apos; &apos;, &apos;&apos;), &apos;%&apos;, &apos;&apos;)) / 100,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level 2 Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>