force-app/main/default/objects/Approval_Rule__c/fields/Level2_Value__c.field-meta.xml
<CustomField>
    <fullName>Level2_Value__c</fullName>
    <formula>IF( CONTAINS(Level2__c , &apos;%&apos;),
0,
VALUE(SUBSTITUTE( TRIM(Level2__c) , &apos; &apos;, &apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level 2 Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>