force-app/main/default/objects/Approval_Rule__c/fields/Vertical_Segment__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Segment__c</fullName>
    <label>Vertical Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vertical_Segment</valueSetName>
    </valueSet>
</CustomField>