force-app/main/default/objects/Approval_Rule__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <formula>IF(Commission__c != null, 10, 0) +
IF(Product__c  != null, 10, 0) +
IF(Add_On__c  != null, 10, 0) +
IF(Company_Code__c  != null, 3, 0) +
IF(Country__c  != null, 2, 0) +
IF(City__c  != null, 2, 0) +
IF(ISPICKVAL(Platform__c, &apos;&apos;), 0, 2)+
IF(ISBLANK(Vertical_Segment__c), 0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Arbitrary number that represents the weight of each rule.This is used in determining the priority in cases where multiple rules satisfy the same scenario.</inlineHelpText>
    <label>Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>