force-app/main/default/objects/Approval_Rule__c/validationRules/Validate_Level_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Level_1</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(Level1__c) 
&amp;&amp;
Level1_Value__c == 0
&amp;&amp;
Level1_Percentage__c == 0</errorConditionFormula>
    <errorMessage>Level 1 has to be a number or a percentage ending in %</errorMessage>
</ValidationRule>