force-app/main/default/objects/Approval_Rule__c/validationRules/Validate_Level_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Level_2</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(Level2__c) 
&amp;&amp;
Level2_Value__c == 0
&amp;&amp;
Level2_Percentage__c == 0</errorConditionFormula>
    <errorMessage>Level 2 has to be a number or a percentage ending in %</errorMessage>
</ValidationRule>