force-app/main/default/objects/Approval_Rule__c/listViews/APAC_HK_Approval_Rules.listView-meta.xml
<ListView>
    <fullName>APAC_HK_Approval_Rules</fullName>
    <columns>Country__c</columns>
    <columns>NAME</columns>
    <columns>Commission__c</columns>
    <columns>Product__c</columns>
    <columns>City__c</columns>
    <columns>Vertical_Segment__c</columns>
    <columns>Level1__c</columns>
    <columns>Level1_Approver__c</columns>
    <columns>Level2__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Add_On__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>hong kong,taiwan,malaysia,singapore,myanmar,cambodia,laos,thailand,philipines,bangaldesh</value>
    </filters>
    <label>APAC - Approval Rules</label>
    <sharedTo>
        <role>FP_Management</role>
    </sharedTo>
</ListView>