force-app/main/default/objects/Approval_Rule__c/listViews/CZ_Approval_Rules.listView-meta.xml
<ListView>
    <fullName>CZ_Approval_Rules</fullName>
    <columns>NAME</columns>
    <columns>Commission__c</columns>
    <columns>Level1__c</columns>
    <columns>Level1_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Czech Republic</value>
    </filters>
    <label>CZ - Approval Rules</label>
    <sharedTo>
        <role>CZ_Management</role>
    </sharedTo>
</ListView>