force-app/main/default/objects/Approval_Rule__c/listViews/LATAM_Approvals.listView-meta.xml
<ListView>
    <fullName>LATAM_Approvals</fullName>
    <columns>NAME</columns>
    <columns>Commission__c</columns>
    <columns>Add_On__c</columns>
    <columns>Product__c</columns>
    <columns>Country__c</columns>
    <columns>City__c</columns>
    <columns>Vertical_Segment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Argentina,Chile,Bolivia,Uruguay,Paraguay,Dominican Republic,Panamá</value>
    </filters>
    <label>LATAM. Approvals</label>
</ListView>